Add General discussion

--- a/manuscript/_assets/references.bib
+++ b/manuscript/_assets/references.bib
@@ -430,6 +430,46 @@
   year={2015}
 }
 
+@inproceedings{levick2016translating,
+  title={Translating homophonic wordplay in Patrick Goujon’s Moi non: a case study},
+  author={Levick, Tiffane},
+  booktitle={Sound/Writing: On Homophonic Translation},
+  year={2016}
+}
+
+@book{briusov1911ot,
+ author = "Briusov, Valery Yakovlevich",
+ title = "Ot perevodchika",
+ publisher = "In: Verlaine, Paul",
+ address = "Sobranie stikhov. V perevode Valerija Briusova. Moskva",
+ publisher = "Skorpion",
+ year = 1911
+}
+
+@article{97fa725a-193f-32d1-a4d2-a56fe7209ce2,
+ ISSN = {02782324},
+ URL = {http://www.jstor.org/stable/24518146},
+ author = {Miguel de Cervantes and Edith Grossman},
+ journal = {Conjunctions},
+ number = {38},
+ pages = {207--225},
+ publisher = {Conjunctions},
+ title = {First Part Of the Ingenious Nobleman Don Quixote of La Mancha},
+ urldate = {2024-10-15},
+ year = {2002}
+}
+
+
+@article{pilshchikov2016semiotics,
+  title={The semiotics of phonetic translation},
+  author={Pilshchikov, Igor},
+  journal={Studia Metrica et Poetica},
+  volume={3},
+  number={1},
+  pages={53--104},
+  year={2016}
+}
+
 @article{beck2014mondegreens,
   title={Mondegreens and soramimi as a method to induce misperceptions of speech content--Influence of familiarity, wittiness, and language competence},
   author={Beck, Claudia and Kardatzki, Bernd and Ethofer, Thomas},
