--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -1165,7 +1165,7 @@ of the presented word was reported, average confidence was 1.13
 confidence in the 0-8 scale (\emph{SD} = 1.38). From the 2,743 total
 responses provided by English participants who listened to Spanish
 words, participants reported having prior knowledge of the presented
-Spanish words in 446 (14.18\%) of them. In those responses, participants
+Spanish words in 197 (7.18\%) of them. In those responses, participants
 reported an average of 4.79 confidence in the 0-8 scale (\emph{SD} =
 1.82). In responses in which no prior knowledge of the presented word
 was reported, average confidence was 1.25 confidence in the 0-8 scale
@@ -1313,48 +1313,45 @@ spa-ENG & $590$ & ($19.53$) & $6$ & ($0.20$) & $2,294$ & ($75.94$) & $131$ & ($4
 
 \section{General discussion}\label{general-discussion}
 
-The present work investigated the dynamics of lexical activation and
-selection dring non-native speech listening. Using a translation
-elicitation task, we collected data from a group of English native
-adults (Experiment 1) and a group of Spanish native adults (Experiment
-2). Neither group was familiar with Catalan, Spanish, or any other
-Romance language. In each trial, participants were presented with
-Spanish words (Experiment 1) or Catalan words (Experiments 1 and 2), and
-then asked to type their best-guess translation for the presented word
-in their native language. Participants provided correct translations
-more often if the presented word and its translation shared phonological
-similarity, only if the number of phonological neighbours around the
-presented word was small. These results suggest that listening to words
-in an unfamiliar language can trigger dynamics of lexical activation and
-selection similar to those triggered by listening to speech in the
-native language.
-
-In Experiment 1, we collected data from two groups of British English
-natives living in the United Kingdom. One group was presented with
-Catalan words, the other with Spanish words. We examined the extent to
-which participants were able to use the phonological similarity between
-the presented word (in Catalan or Spanish) and its target translation to
-provide accurate responses, despite reporting no prior relevant
-experience with the Catalan or Spanish. In Experiment 2, we tested a
-group of (European) Spanish natives in the same task, who were presented
-with Catalan words. Catalan and Spanish are two Romance languages whose
-close typological distance is reflected in the fact that they share many
-cognates, where English is a Germanic language that shares considerably
-fewer cognates with Catalan and Spanish. By testing participants
-translating words from typologically close or distant languages, we
-expected to widen the range of the phonological similarity scores of the
-translation pairs involved in the experimental task, therefore allowing
-us to explore potential cross-language differences in participant's
-performance. Some participants in Experiments 1 and 2 were surprisingly
-good at translating a subset of words which had low phonological
-similarity with their correct translation. We were concerned that this
-may be caused by some prior knowledge of specific words by our
-participants, as some Spanish words are commonly seen in media or
-product labels, making them familiar even to monolingual speakers of
-English. In Experiment 3, we collected additional data from a new group
-of British English natives. The design was closely modelled after
-Experiment 1, except that after providing their response in each trial,
-participants reported whether they had previous knowledge of the
+The present work explored the psycholinguistic bases of homophone
+translations, a phenomenon in which listening to speech in a
+non-native---perhaps unfamiliar---language leads to the activation of
+lexical representations in the native language. We investigated how
+phonological similarity and its interaction with phonological
+neighbourhood density impact the dynamics of lexical activation and
+selection during non-native word processing. We designed a translation
+elicitation task in which participants listened to individual words in a
+non-native, unfamiliar language, and then were asked to provide their
+best-guess translation for each word in their native language. We run
+three experiments. In Experiment 1, British English-native adults
+listened to a list of words in Catalan or Spanish. Participants reported
+no prior familiarity with Catalan, Spanish, or any other Romance
+language; yet, participants provided accurate translations for words
+that shared some degree of phonological similarity with their correct
+English translation. Participants only benefited from phonological
+similarity when the number of English phonological neighbours of the
+presented word was small. Experiment 2 was aimed at extending our
+findings to a population of participants whose native language was
+typologically closer, to the (still unfamiliar) presented language. We
+tested a group of Spanish native adults who listened to a list of
+Catalan words. Again, participants reported no prior familiarity with
+Catalan, or any other Romance language other than Spanish. In line with
+the results in English natives, Spanish natives also showed an
+interaction between phonological similarity and phonological
+neighbourhood size. However, the facilitation effect of phonological
+similarity in the Spanish participants was more robust to the
+interferring effect of phonological neighbourhood density, providing
+correct translations for high-neighbourhood density words more often
+than participants in Experiment 1. In Experiment 3, we replicated the
+results from Experiment 1, while controlling for participants' prior
+familiarity with the Catalan and Spanish words. We suspected that some
+English participants might have managed to provide correct translations
+for some low-phonological similarity words despite being reportedly
+unfamiliar with Catalan, Spanish, or any other Romance language, thanks
+to previous exposure to those words. We collected additional data from a
+new group of British English natives. The design was closely modelled
+after Experiment 1, except that after providing their response in each
+trial, participants reported whether they had previous knowledge of the
 presented word. After removing responses in which participants reported
 prior knowledge about the meaning of the presented Catalan or Spanish
 word, we found similar resutls as in Experiment 1, suggesting that
@@ -1362,21 +1359,99 @@ participants did not simply rely on prior familiarity with the
 word-forms presented but rather exclusively on their phonological
 similarity with the correct English translation.
 
-Our findings provide insights into the mechanisms underlying homophonic
-translations. This phenomenon is frequently experienced by listeners of
-foreign speech, when strings of sounds in the input are perceived as
-strings of words or phrases in the native language, without necessarily
-preserving the meaning.
+The results in the present work tap into homophonic translation, a
+frequent phenomenon to many speakers to occurs when speech in a
+non-native language activates lexical representations in the native
+language withhout necessarily preserving the meaning. This phenomenon
+has been described across many languages, and coined with different
+terms, the most famous being the \emph{Soramimi} in Japanese.
+\emph{Soramimi} refers specifically to homophonic translation in the
+context of music, when particular sections of the lyrics of a song in a
+non-native language make listeners think of particular words and phrases
+in their own native language, with possibly a completely different
+meaning. While \emph{Somoramimi} refers to the spontaneous ocurrence of
+homophonic translations, homophonic translation is often exploited by
+translators to preserve the meter and ``sound structure'' (e.g., rhymes)
+of the original poem in the target language (e.g.,
+\citeproc{ref-levick2016translating}{Levick, 2016};
+\citeproc{ref-pilshchikov2016semiotics}{Pilshchikov, 2016}), in such way
+that the translator ``sacrifice{[}s{]} fidelity to the image rather than
+the melodiousness of verse'' (\citeproc{ref-briusov1911ot}{Briusov,
+1911}). In the same line, Edith Grossman's translation of \emph{El
+Quijote} (\citeproc{ref-cervantes}{\textbf{cervantes?}}) present a
+similar case, in which formal aspects of the original text in Spanish
+are favoured to some degree over equivalence to English, even sometimes
+keeping Spanish words from the original text in the English translation
+(e.g., \emph{Señor}, \emph{ínsula}).
 
-This type of cross-linguistic similarity has also been extremely
-informative for the study of bilingual lexical processing: words that
-share high form-similarity with their translations are processed faster
-and more accurately than words sharing lower phonological similarity.
-This phenomenon has provided strong evidence in favour of the
-language-non selective hypothesis of bilingual lexical access, which
-states that bilinguals activate lexical representations in both
-languages, even during monolingual situations. This facilitation effect
-has been reported for comprehension
+The underlying mechanisms that lead to spontaneous homophonic
+translations are informative of the undeerlying mechanisms of native
+speech processing: how does the lexical system deal with the non-native
+speech signal, in which form-meaning associations are scarce, if not
+absent? This question remains relatively explored from a
+psycholinguistic standpoint. The present work was addressed at exploring
+the conditions under which non-native speech is likely to result in
+correct translations. To account for the fact that prior familiarity
+with the language (e.g., form-meaning associations) may contribute to
+correct translations, we tested participants in a language that they
+reported being unfamiliar with. In such conditions, participants can
+almost exlusively rely on the acoustic properties of the speech signal
+to provide correct translations.
+
+Our findings suggest that participants were able to exploit the
+phonological similarity between the presented words and their correct
+translation, even when both words shared less than 50\% of their
+phonological form (as measured by their Levenshtein distance). How the
+perceptual system deals with non-native phonemes is a vastly studied
+subject. The same cannot be said about how the perceptual system deals
+with non-native word-forms. We provide new experimental evidence
+suggesting that participants accommodate non-native phonological forms
+to their native phoneme inventory, leading to the activation of native
+lexical representations. One of the limitations of the present study is
+that Levenshtein similarity underestimates the actual phonetic
+similarity between the signal and the phonological form of the correct
+translations. Phonological transcriptions like X-SAMPA---which we used
+to calculate Levenshtein similarity----are abstract representations that
+ignore non-phonological contrasts (e.g., phones), and consider different
+symbols as completely different phonemes disregarding the fact that some
+phonemes share more phonetic features than others. Altogether, it is
+likely that participants exploited a more fine grained, raw source of
+information to provide correct answers.
+
+Our findings also suggest that, in line with previous studies of
+word-processing, phonological neighbourhood size interfered
+participants' ability to produce correct translations, even for words
+with high phonological similarity with their correct translation. We
+calculated a measure of cross-linguistic neighbourhood size by counting,
+for each presented word (in Catalan or Spanish in Experiments 1 and 3,
+Catalan in Experiment 2) the number of phonologically related words
+(with a Levenshtein distance of one) in the target language (English in
+Experiments 1 and 3, Spanish in Experiment 2). To account for the fact
+that competition between phonological neighbours is sensitive to lexical
+frequency (high-freuqency neighbours produce stronger interference
+effects), we only counted neighbours with a lexical freuqency higher
+than the correct translation. Using this measure, we found that, across
+the three experiments, participants ability to exploit phonological
+similarity to produce correct translations declined as the number of
+phonological neighbours increased.
+
+A comparison between results in Experiments 1 and 2 suggested that the
+performance of Spanish participants translating Catalan was more
+resilient to the interfering effects of phonological neighbourhood
+density than the performance of English participants translating Catalan
+or Spanish. As highlihted before, Catalan and Spanish (both Romance
+languages) are typologically closer to each other than to English (a
+Germanic language). Catalan and Spanish share a higher proportion of
+cognates (i.e., form-similar translation equivalents) than Catalan and
+English, or Spanish and English. Previous studies in bilinguals show
+that this kind of cross-linguistic similarity impacts lexical
+processing: words that share high phonological similarity with their
+translations are processed faster and more accurately than words sharing
+lower phonological similarity. This phenomenon has provided strong
+evidence in favour of the language-non selective hypothesis of bilingual
+lexical access, which states that bilinguals activate lexical
+representations in both languages, even during monolingual situations.
+This facilitation effect has been reported for comprehension
 (\citeproc{ref-dijkstra2010cross}{Dijkstra et al., 2010};
 \citeproc{ref-midgley2011effects}{Midgley et al., 2011};
 \citeproc{ref-thierry2007brain}{Thierry \& Wu, 2007}), production
@@ -1385,7 +1460,52 @@ has been reported for comprehension
 \citeproc{ref-elias2022crosslanguage}{Elias \& Degani, 2022};
 \citeproc{ref-lotto1998effects}{Lotto \& De Groot, 1998};
 \citeproc{ref-valente2018does}{Valente et al., 2018}), and translation
-(\citeproc{ref-christoffels2006memory}{Christoffels et al., 2006}).
+(\citeproc{ref-christoffels2006memory}{Christoffels et al., 2006}). To
+our knowledge, this present study is the first to investigate the role
+of cross-linguistic phonological similarity in monolinguals. In
+particular, our participants were reportedly unfamiliar with the
+presented language. As such, they had to complete our translation
+elicitation task in the absence of form-meaning mappings, therefore
+relying exclusively on the phonological similarity between the presented
+words and their correct translations. This provides a convenient case to
+investigate the role of phonological similarity in lexical processing,
+disantangling the contribution of phonological similarity from the
+contribution of conceptual equivalence. Future studies might expand the
+methods used in the present study to elaborate in this issue.
+
+Two populations of speakers were tested in the present study: British
+English native adults living in the United Kindgom, and Spanish native
+adults living in Spain. Our findings suggest that the typological
+distance between the presented and target language is associated with a
+more robust facilitation effect of phonological similarity. Whether such
+association is linear (i.e., robustness of facilitation increases
+linearly with typological distance), proportional, or even extends
+beyond the specific pair of languages involved in the present work
+remains unclear. The generalisability of these findings can also be
+tested by increasing the repertoire of words involved in th translation
+elicitation task. In Experiments 1 to 3, participants answered to a
+maximum of 105 words. All words were of high-frequency, and had a low
+age-of-acquisition. In order to characterise listeners' ability to
+translate correctly words from an unfamiliar language, words with
+varying levels of difficulty should be included.
+
+In summary, the present paper provides insights into the
+psycholinguistic mechanisms underlying homophonic translation. English
+and Spanish native adults were tested in a translation elicitation task
+in which they had to guess the English or Spanish translation of a
+series of words in an unfamiliar language. Participants successfully
+exploited phonological similarity between the presented words and their
+correct translations to provide correct answers. Participants'
+performance in the task only benefited from phonological similarity when
+the presented word had few higher-frequency phonological neighbours in
+the target language. Finally, the faciltiation effect of phonological
+similarity was more robust in the Spanish native participants, who
+translated words from a typologically closer language than English
+participants. Overall, the findings presented in the present paper
+suggest that the processing of words in a non-native, unfamiliar
+language recruits mechanisms of lexical activation, selection, and
+interference parallel to those recruited by listening to words in a
+native language.
 
 \section{References}\label{references}
 
@@ -1403,6 +1523,9 @@ perceptual reorganization for nonnative speech contrasts: Zulu click
 discrimination by english-speaking adults and infants. \emph{Journal of
 Experimental Psychology: Human Perception and Performance},
 \emph{14}(3), 345.
+
+\bibitem[\citeproctext]{ref-briusov1911ot}
+Briusov, V. Y. (1911). \emph{Ot perevodchika}. Skorpion.
 
 \bibitem[\citeproctext]{ref-broersma2021praat}
 Broersma, P., \& Weenink, D. (2021). \emph{Praat: Doing phonetics by
@@ -1494,6 +1617,10 @@ Levenshtein, V. I. (1966). Binary codes capable of correcting deletions,
 insertions, and reversals. \emph{Soviet Physics Doklady}, \emph{10},
 707--710.
 
+\bibitem[\citeproctext]{ref-levick2016translating}
+Levick, T. (2016). Translating homophonic wordplay in patrick goujon's
+moi non: A case study. \emph{Sound/Writing: On Homophonic Translation}.
+
 \bibitem[\citeproctext]{ref-lotto1998effects}
 Lotto, L., \& De Groot, A. M. (1998). Effects of learning method and
 word type on acquiring vocabulary in an unfamiliar language.
@@ -1539,6 +1666,10 @@ Sogo, H., Kastman, E., \& Lindeløv, J. K. (2019). {PsychoPy2}:
 Peperkamp, S., Vendelin, I., \& Nakamura, K. (2008). On the perceptual
 origin of loanword adaptations: Experimental evidence from japanese.
 \emph{Phonology}, \emph{25}(1), 129--164.
+
+\bibitem[\citeproctext]{ref-pilshchikov2016semiotics}
+Pilshchikov, I. (2016). The semiotics of phonetic translation.
+\emph{Studia Metrica Et Poetica}, \emph{3}(1), 53--104.
 
 \bibitem[\citeproctext]{ref-rcoreteam2013language}
 R Core Team. (2013). \emph{R: {A Language} and {Environment} for
@@ -1598,6 +1729,9 @@ discrimination by english-speaking adults and infants. \emph{Journal of
 Experimental Psychology: Human Perception and Performance},
 \emph{14}(3), 345.
 
+\bibitem[\citeproctext]{ref-briusov1911ot}
+Briusov, V. Y. (1911). \emph{Ot perevodchika}. Skorpion.
+
 \bibitem[\citeproctext]{ref-broersma2021praat}
 Broersma, P., \& Weenink, D. (2021). \emph{Praat: Doing phonetics by
 computer {[}{Computer} program{]}} (Version 6.1.54).
@@ -1688,6 +1822,10 @@ Levenshtein, V. I. (1966). Binary codes capable of correcting deletions,
 insertions, and reversals. \emph{Soviet Physics Doklady}, \emph{10},
 707--710.
 
+\bibitem[\citeproctext]{ref-levick2016translating}
+Levick, T. (2016). Translating homophonic wordplay in patrick goujon's
+moi non: A case study. \emph{Sound/Writing: On Homophonic Translation}.
+
 \bibitem[\citeproctext]{ref-lotto1998effects}
 Lotto, L., \& De Groot, A. M. (1998). Effects of learning method and
 word type on acquiring vocabulary in an unfamiliar language.
@@ -1733,6 +1871,10 @@ Sogo, H., Kastman, E., \& Lindeløv, J. K. (2019). {PsychoPy2}:
 Peperkamp, S., Vendelin, I., \& Nakamura, K. (2008). On the perceptual
 origin of loanword adaptations: Experimental evidence from japanese.
 \emph{Phonology}, \emph{25}(1), 129--164.
+
+\bibitem[\citeproctext]{ref-pilshchikov2016semiotics}
+Pilshchikov, I. (2016). The semiotics of phonetic translation.
+\emph{Studia Metrica Et Poetica}, \emph{3}(1), 53--104.
 
 \bibitem[\citeproctext]{ref-rcoreteam2013language}
 R Core Team. (2013). \emph{R: {A Language} and {Environment} for
