--- a/manuscript/_assets/references.bib
+++ b/manuscript/_assets/references.bib
@@ -166,6 +166,38 @@
   keywords = {duplicate-citation-key}
 }
 
+@article{van2015learning,
+  title={Learning to perceive and recognize a second language: The L2LP model revised},
+  author={Van Leussen, Jan-Willem and Escudero, Paola},
+  journal={Frontiers in psychology},
+  volume={6},
+  pages={1000},
+  year={2015},
+  publisher={Frontiers Media SA}
+}
+
+@article{grainger1990word,
+  title={Word frequency and neighborhood frequency effects in lexical decision and naming},
+  author={Grainger, Jonathan},
+  journal={Journal of memory and language},
+  volume={29},
+  number={2},
+  pages={228--244},
+  year={1990},
+  publisher={Elsevier}
+}
+
+@article{vitevitch1998words,
+  title={When words compete: Levels of processing in perception of spoken words},
+  author={Vitevitch, Michael S and Luce, Paul A},
+  journal={Psychological science},
+  volume={9},
+  number={4},
+  pages={325--329},
+  year={1998},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+}
+
 @article{christoffels2006memory,
   title = {Memory and Language Skills in Simultaneous Interpreters: {{The}} Role of Expertise and Language Proficiency},
   author = {Christoffels, Ingrid K and De Groot, Annette MB and Kroll, Judith F},
@@ -386,6 +418,39 @@
   publisher = {Cambridge University Press}
 }
 
+@article{miyawaki1975effect,
+  title={An effect of linguistic experience: The discrimination of [r] and [l] by native speakers of Japanese and English},
+  author={Miyawaki, Kuniko and Jenkins, James J and Strange, Winifred and Liberman, Alvin M and Verbrugge, Robert and Fujimura, Osamu},
+  journal={Perception \& Psychophysics},
+  volume={18},
+  number={5},
+  pages={331--340},
+  year={1975},
+  publisher={Springer}
+}
+
+@article{baese2020perception,
+  title={Perception of non-native speech},
+  author={Baese-Berk, Melissa M and McLaughlin, Drew J and McGowan, Kevin B},
+  journal={Language and Linguistics Compass},
+  volume={14},
+  number={7},
+  pages={e12375},
+  year={2020},
+  publisher={Wiley Online Library}
+}
+
+@article{pallier2001influence,
+  title={The influence of native-language phonology on lexical access: Exemplar-based versus abstract lexical entries},
+  author={Pallier, Christophe and Colom{\'e}, Angels and Sebasti{\'a}n-Gall{\'e}s, N{\'u}ria},
+  journal={Psychological science},
+  volume={12},
+  number={6},
+  pages={445--449},
+  year={2001},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+}
+
 @article{best1988examination,
   title={Examination of perceptual reorganization for nonnative speech contrasts: Zulu click discrimination by English-speaking adults and infants.},
   author={Best, Catherine T and McRoberts, Gerald W and Sithole, Nomathemba M},
@@ -446,7 +511,7 @@
  year = 1911
 }
 
-@article{97fa725a-193f-32d1-a4d2-a56fe7209ce2,
+@article{cervantes,
  ISSN = {02782324},
  URL = {http://www.jstor.org/stable/24518146},
  author = {Miguel de Cervantes and Edith Grossman},
@@ -459,6 +524,36 @@
  year = {2002}
 }
 
+@book{gasparov2006semen,
+ author = "Gasparov, Mikhail Leonovich",
+ title = "Semen Kirsanov",
+ publisher = "znamenosets sovetskogo formalizma",
+ address = "In",
+ publisher = "Kirsanov",
+ address = "Semen. Stikhotvorenija i poemy. Sankt-Peterburg",
+ publisher = "Akademicheskij proekt",
+ year = 2006
+}
+
+@article{dembeck2015oberflachenubersetzung,
+  title={Oberfl{\"a}chen{\"u}bersetzung: The Poetics and Cultural Politics of Homophonic Translation},
+  author={Dembeck, Till},
+  journal={Critical Multilingualism Studies},
+  volume={3},
+  number={1},
+  pages={7--25},
+  year={2015},
+  publisher={United States of America}
+}
+@inproceedings{efimova2018homophonic,
+  title={Homophonic Translation as Humpty-Dumpty’s Choice},
+  author={Efimova, Nadezhda N and Ruzhnikova, Maria L and Violina, Marina I},
+  booktitle={SHS Web of Conferences},
+  volume={50},
+  pages={01049},
+  year={2018},
+  organization={EDP Sciences}
+}
 
 @article{pilshchikov2016semiotics,
   title={The semiotics of phonetic translation},
@@ -551,6 +646,17 @@
   pages = {1271--1283},
   publisher = {Springer},
   keywords = {duplicate-citation-key}
+}
+
+@article{dufour2010phonological,
+  title={Phonological neighbourhood effects in French spoken-word recognition},
+  author={Dufour, Sophie and Frauenfelder, Ulrich H},
+  journal={Quarterly Journal of Experimental Psychology},
+  volume={63},
+  number={2},
+  pages={226--238},
+  year={2010},
+  publisher={SAGE Publications Sage UK: London, England}
 }
 
 @article{elias2022crosslanguage,
