--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -1013,7 +1013,7 @@ responses with \(\geq\) 10 average accuracy.
 
 \caption{\label{tbl-surprises}List of items with unexpectedly high
 accuracy: the Levenshtein similarityscore betwen the presented word (in
-Catalan or Spanish) and their correct Enlgish translation is zero, but
+Catalan or Spanish) and their correct English translation is zero, but
 participants, who are reportedly unfamiliar with the presented language,
 were on average \textgreater10\% likely to guess the correct
 translation.}
@@ -1024,14 +1024,13 @@ translation.}
 \begin{tblr}[         %% tabularray outer open
 ]                     %% tabularray outer close
 {                     %% tabularray inner open
-colspec={Q[]Q[]Q[]},
-cell{6}{1}={c=3}{},cell{23}{1}={c=3}{},cell{29}{1}={c=3}{},
-cell{2}{1}={preto={\hspace{1em}}},
+colspec={Q[]Q[]Q[]Q[]},
+cell{2}{1}={c=4}{},cell{8}{1}={c=4}{},cell{25}{1}={c=4}{},
 cell{3}{1}={preto={\hspace{1em}}},
 cell{4}{1}={preto={\hspace{1em}}},
 cell{5}{1}={preto={\hspace{1em}}},
+cell{6}{1}={preto={\hspace{1em}}},
 cell{7}{1}={preto={\hspace{1em}}},
-cell{8}{1}={preto={\hspace{1em}}},
 cell{9}{1}={preto={\hspace{1em}}},
 cell{10}{1}={preto={\hspace{1em}}},
 cell{11}{1}={preto={\hspace{1em}}},
@@ -1046,45 +1045,54 @@ cell{19}{1}={preto={\hspace{1em}}},
 cell{20}{1}={preto={\hspace{1em}}},
 cell{21}{1}={preto={\hspace{1em}}},
 cell{22}{1}={preto={\hspace{1em}}},
+cell{23}{1}={preto={\hspace{1em}}},
 cell{24}{1}={preto={\hspace{1em}}},
-cell{25}{1}={preto={\hspace{1em}}},
 cell{26}{1}={preto={\hspace{1em}}},
 cell{27}{1}={preto={\hspace{1em}}},
 cell{28}{1}={preto={\hspace{1em}}},
+cell{29}{1}={preto={\hspace{1em}}},
 cell{30}{1}={preto={\hspace{1em}}},
 cell{31}{1}={preto={\hspace{1em}}},
+row{1}={,cmd=\bfseries,},
+hline{1,2}={1,2,3,4}{solid, 0.1em, black},
+row{2}={,cmd=\bfseries,},
+hline{3}={1,2,3,4}{solid, 0.1em, black},
+row{8}={,cmd=\bfseries,},
+hline{8,9}={1,2,3,4}{solid, 0.1em, black},
+row{25}={,cmd=\bfseries,},
+hline{25,26}={1,2,3,4}{solid, 0.1em, black},
 }                     %% tabularray inner close
 \toprule
-Translation & Accuracy (%) & SE \\ \midrule %% TinyTableHeader
-cavall /kəβaʎ/ - horse /hɔs/             & 17.14 & 6.37 \\
-llibre /ʎiβɾə/ - book /bʊk/              & 17.14 & 6.37 \\
-camisa /kəmizə/ - shirt /ʃɜt/            & 16.67 & 6.21 \\
-poma /poma/ - apple /æpl/                & 16.67 & 6.21 \\
-Experiment 1 (cat-ENG) && \\
-cama /kamə/ - leg /lɛg/                  & 11.11 & 5.24 \\
-pantalón /paŋtalon/ - trousers /traʊzəz/ & 77.42 & 7.51 \\
-naranja /naɾaŋxa/ - orange /ɒrɪnʤ/       & 41.94 & 8.86 \\
-leche /leʧe/ - milk /mɪlk/               & 35.48 & 8.59 \\
-toro /toɾo/ - bull /bʊl/                 & 33.33 & 8.61 \\
-libro /liβɾo/ - book /bʊk/               & 30.00 & 8.37 \\
-cebra /θebɾa/ - zebra /zibrə/            & 29.03 & 8.15 \\
-pan /pan/ - bread /brɛd/                 & 29.03 & 8.15 \\
-pollo /poʎo/ - chicken /ʧɪkɪn/           & 26.67 & 8.07 \\
-jirafa /xiɾafa/ - giraffe /ʤɪrɑf/        & 20.69 & 7.52 \\
-perro /pero/ - dog /dɒɡ/                 & 16.13 & 6.61 \\
-pluma /pluma/ - feather /fɛðə/           & 16.13 & 6.61 \\
-puerta /pwerta/ - door /dɔ/              & 16.13 & 6.61 \\
-pie /pje/ - foot /fʊt/                   & 12.90 & 6.02 \\
-caballo /kaβaʎo/ - horse /hɔs/           & 10.34 & 5.66 \\
-bocadillo /bokadiʎo/ - sandwich /sænwɪʤ/ & 10.00 & 5.48 \\
-Experiment 2 (spa-ENG) && \\
-globo /ɡloβo/ - balloon /bəlun/          & 10.00 & 5.48 \\
-fulla /fuʎə/ - hoja /oxa/                & 30.43 & 9.59 \\
-ull /uʎ/ - ojo /oxo/                     & 21.74 & 8.60 \\
-got /gɔt/ - vaso /baso/                  & 20.00 & 8.00 \\
-entrepà /entɾəpa/ - bocadillo /bokadiʎo/ & 13.04 & 7.02 \\
-Experiment 3 (cat-SPA) && \\
-mirall /miɾaʎ/ - espejo /espexo/         & 12.50 & 6.75 \\
+Translation & X-SAMPA & Accuracy (\%) & SE \\ \midrule %% TinyTableHeader
+Experiment 1 (cat-ENG) &&& \\
+cavall - horse       & /k5BaL/ - /hOs/          & 17.14 & 6.37 \\
+llibre - book        & /LiB45/ - /bUk/          & 17.14 & 6.37 \\
+camisa - shirt       & /k5miz5/ - /S36t/        & 16.67 & 6.21 \\
+poma - apple         & /poma/ - /1pl/           & 16.67 & 6.21 \\
+cama - leg           & /kam5/ - /lEg/           & 11.11 & 5.24 \\
+Experiment 2 (spa-ENG) &&& \\
+pantalon - trousers  & /pantalon/ - /tr0aUs56z/ & 77.42 & 7.51 \\
+naranja - orange     & /na4aNxa/ - /Or0I0ndZ/   & 41.94 & 8.86 \\
+leche - milk         & /letSe/ - /mIlk/         & 35.48 & 8.59 \\
+toro - bull          & /to4o/ - /bUl/           & 33.33 & 8.61 \\
+libro - book         & /liB4o/ - /bUk/          & 30.00 & 8.37 \\
+cebra - zebra        & /TeB4a/ - /zibr05/       & 29.03 & 8.15 \\
+pan - bread          & /pan/ - /br0Ed/          & 29.03 & 8.15 \\
+pollo - chicken      & /poLo/ - /tSIkIn/        & 26.67 & 8.07 \\
+jirafa - giraffe     & /xi4afa/ - /dZI0r01f/    & 20.69 & 7.52 \\
+perro - dog          & /pErro/ - /dAg/          & 16.13 & 6.61 \\
+pluma - feather      & /pluma/ - /fED56/        & 16.13 & 6.61 \\
+puerta - door        & /pwE4ta/ - /dor/         & 16.13 & 6.61 \\
+pie - foot           & /pje/ - /fUt/            & 12.90 & 6.02 \\
+caballo - horse      & /kaBaLo/ - /hors/        & 10.34 & 5.66 \\
+bocadillo - sandwich & /bokaDiLo/ - /s1ndwItS/  & 10.00 & 5.48 \\
+globo - balloon      & /gloBo/ - /b5lun/        & 10.00 & 5.48 \\
+Experiment 3 (cat-SPA) &&& \\
+fulla - hoja         & /fuL5/ - /oxa/           & 30.43 & 9.59 \\
+ull - ojo            & /uL/ - /oxo/             & 21.74 & 8.60 \\
+got - vaso           & /gOt/ - /baso/           & 20.00 & 8.00 \\
+entrepa - bocadillo  & /ent45pa/ - /bokaDiLo/   & 13.04 & 7.02 \\
+mirall - espejo      & /mi4aL/ - /espexo/       & 12.50 & 6.75 \\
 \bottomrule
 \end{tblr}
 
