--- a/manuscript/manuscript.qmd
+++ b/manuscript/manuscript.qmd
@@ -11,6 +11,7 @@ library(brms)
 library(tidybayes)
 library(ggExtra)
 library(tinytable)
+library(stringdist)
 
 set.seed(1234)
 
@@ -98,7 +99,7 @@ collection_dates <- participants_1 |>
   range() |>
   format("%B %dth, %Y")
 
-n_participants <- n_distinct(participants_1)
+n_participants <- dplyr::n_distinct(participants_1)
 n_participants_group <- table(participants_1$group)
 participants_age <- participants_1 |>
   summarise(across(age, lst(mean, sd, min, max)))
@@ -183,11 +184,11 @@ tbl_data |>
 ```{r}
 #| label: stimuli-lengths
 lengths <- stimuli |>
-  select(group, ipa_flat_1, ipa_flat_2, word_1, word_2) |>
-  mutate(across(ipa_flat_1:word_2, nchar)) |>
+  select(group, ipa_1, ipa_2, word_1, word_2) |>
+  mutate(across(ipa_1:word_2, nchar)) |>
   summarise(
     across(
-      c(ipa_flat_1, ipa_flat_2, word_1, word_2),
+      c(ipa_1, ipa_2, word_1, word_2),
       lst(mean, sd, min, max)
     ),
     .by = group
@@ -203,7 +204,7 @@ durations <- split(durations, durations$group)
 names(durations) <- janitor::make_clean_names(names(durations))
 ```
 
-We created two lists of input words to be presented to participants in the auditory modality: one in Catalan and one in Spanish. Words in the Catalan list were `r round(lengths$cat_eng$ipa_flat_1_mean, 2)` phonemes long on average (*SD* = `r round(lengths$cat_eng$ipa_flat_1_sd, 2)`, Range = `r round(lengths$cat_eng$ipa_flat_1_min, 2)`-`r round(lengths$cat_eng$ipa_flat_1_max, 2)`), and the orthographic forms of their English translations (which participants had to type) were `r round(lengths$cat_eng$word_2_mean, 2)` characters long on average (*SD* = `r round(lengths$cat_eng$word_2_sd, 2)`, Range = `r round(lengths$cat_eng$word_2_min, 2)`-`r round(lengths$cat_eng$word_2_max, 2)`). Words in the Spanish list were `r round(lengths$spa_eng$ipa_flat_1_mean, 2)` phonemes long on average (*SD* = `r round(lengths$spa_eng$ipa_flat_1_sd, 2)`, Range = `r round(lengths$spa_eng$ipa_flat_1_min, 2)`-`r round(lengths$spa_eng$ipa_flat_1_max, 2)`), and the orthographic form of their English translations were `r round(lengths$spa_eng$word_2_mean, 2)` characters long on average (*SD* = `r round(lengths$spa_eng$word_2_sd, 2)`, Range = `r round(lengths$spa_eng$word_2_min, 2)`-`r round(lengths$spa_eng$word_2_max, 2)`).
+We created two lists of input words to be presented to participants in the auditory modality: one in Catalan and one in Spanish. Words in the Catalan list were `r round(lengths$cat_eng$ipa_1_mean, 2)` phonemes long on average (*SD* = `r round(lengths$cat_eng$ipa_1_sd, 2)`, Range = `r round(lengths$cat_eng$ipa_1_min, 2)`-`r round(lengths$cat_eng$ipa_1_max, 2)`), and the orthographic forms of their English translations (which participants had to type) were `r round(lengths$cat_eng$word_2_mean, 2)` characters long on average (*SD* = `r round(lengths$cat_eng$word_2_sd, 2)`, Range = `r round(lengths$cat_eng$word_2_min, 2)`-`r round(lengths$cat_eng$word_2_max, 2)`). Words in the Spanish list were `r round(lengths$spa_eng$ipa_1_mean, 2)` phonemes long on average (*SD* = `r round(lengths$spa_eng$ipa_1_sd, 2)`, Range = `r round(lengths$spa_eng$ipa_1_min, 2)`-`r round(lengths$spa_eng$ipa_1_max, 2)`), and the orthographic form of their English translations were `r round(lengths$spa_eng$word_2_mean, 2)` characters long on average (*SD* = `r round(lengths$spa_eng$word_2_sd, 2)`, Range = `r round(lengths$spa_eng$word_2_min, 2)`-`r round(lengths$spa_eng$word_2_max, 2)`).
 
 In each trial, participants listened to one audio file, wich contained a single word. The audio files were the same ones used in child experiments conducted in the Laboratori de Recerca en Infància of Universitat Pompeu Fabra (Barcelona, Spain). These audio files were recorded by a proficient Catalan-Spanish female bilingual from the Metropolitan Area of Barcelona in a child-directed manner. Catalan and Spanish words were recorded at 44,100 Hz in separate files in the same session, and then de-noised using Audacity and normalised at peak intensity using Praat [@broersma2021praat]. The average duration of the Catalan audio files was `r round(durations$cat_eng$duration_mean, 2)` seconds (*SD* = `r round(durations$cat_eng$duration_sd, 2)`, Range = `r round(durations$cat_eng$duration_min, 2)`-`r round(durations$cat_eng$duration_max, 2)`). The average duration of the Spanish audio files was `r round(durations$spa_eng$duration_mean, 2)` seconds (*SD* = `r round(durations$spa_eng$duration_sd, 2)`, Range = `r round(durations$spa_eng$duration_min, 2)`-`r round(durations$spa_eng$duration_max, 2)`).
 
@@ -221,7 +222,7 @@ stim_exc_freq_n <- sum(map_int(stim_exc_freq, "n"))
 For each word in the Catalan and Spanish lists pair, we defined three predictors of interest: the lexical frequency of the correct English translation (*Frequency*), the phonological similarity between the presented word (in Catalan or Spanish) and their correct English translation (*Similarity*), and the presented word's number of cross-language phonological neighbours (*CLPN*) in English. *Frequency* was included as a nuance predictor, under the hypothesis that---keeping other predictors constant---participants would translate higher-frequency words more accurately and faster than lower-frequency words. Lexical frequencies of correct translations were extracted from SUBTLEX-UK [@van2014subtlex], and transformed to Zipf scores. Words in the stimuli list without a lexical frequency value were excluded from data analysis (`r stim_exc_freq$cat_eng$n` in the Catalan list, `r stim_exc_freq$spa_eng$n` in the Spanish list).
 
 
-We calculated *Similarity*, our main predictor of interest, by computing the Levenshtein similarity between the X-SAMPA transcriptions of each pair of translations using the `stringdist` R package [@van2014stringdist]. The Levenshtein distance computes the edit distance between two character strings---in this case, two phonological transcriptions---by counting the number of additions, deletions, and substitutions necessary to make both strings identical [@levenshtein1966binary]. We divided this edit distance by the number of characters included in the longest X-SAMPA transcription of the translation pair. This results in a proportion score, in which values closer to zero correspond to lower Levenshtein distances between phonological transcriptions (i.e., higher similarity), and values closer to 1 correspond to higher Levenshtein distances (i.e., lower similarity). This transformation accounts for the fact that the Levenshtein distance tends to increase with the length of the transcriptions. For interpretability, we subtracted this proportion from one, so that values closer to one correspond to higher similarity between phonological transcriptions, and values closer to zero correspond to lower similarity between phonological transcriptions. For example, the *table* (`teIb@l`)-*mesa* (`mesa`) translation pair had a `r scales::percent(stringsim(enc2utf8("teɪbəl"), enc2utf8("mesa")))` similarity, while the *train* (`trEIn`)-*tren* (`tREn`) translation pair had a `r scales::percent(stringsim(enc2utf8("trEIn"), enc2utf8("tɾEn")))` similarity. @tbl-stimuli summarises the lexical frequency, phonological neighbourhood density and phonological overlap of the words included in the Catalan and the Spanish lists.
+We calculated *Similarity*, our main predictor of interest, by computing the Levenshtein similarity between the X-SAMPA transcriptions of each pair of translations using the `stringdist` R package [@van2014stringdist]. The Levenshtein distance computes the edit distance between two character strings---in this case, two phonological transcriptions---by counting the number of additions, deletions, and substitutions necessary to make both strings identical [@levenshtein1966binary]. We divided this edit distance by the number of characters included in the longest X-SAMPA transcription of the translation pair. This results in a proportion score, in which values closer to zero correspond to lower Levenshtein distances between phonological transcriptions (i.e., higher similarity), and values closer to 1 correspond to higher Levenshtein distances (i.e., lower similarity). This transformation accounts for the fact that the Levenshtein distance tends to increase with the length of the transcriptions. For interpretability, we subtracted this proportion from one, so that values closer to one correspond to higher similarity between phonological transcriptions, and values closer to zero correspond to lower similarity between phonological transcriptions. For example, the *table* (`teIb@l`)-*mesa* (`mesa`) translation pair had a `r scales::percent(stringdist::stringsim(enc2utf8("teɪbəl"), enc2utf8("mesa")))` similarity, while the *train* (`trEIn`)-*tren* (`tREn`) translation pair had a `r scales::percent(stringdist::stringsim(enc2utf8("trEIn"), enc2utf8("tɾEn")))` similarity. @tbl-stimuli summarises the lexical frequency, phonological neighbourhood density and phonological overlap of the words included in the Catalan and the Spanish lists.
 
 For each Catalan and Spanish word, we calculated the number of *CLPN* by counting the number of English words with same or higher lexical frequency, and whose phonological transcription (in X-SAMPA format) different in up to one phoneme from that of the presented Catalan or Spanish word. Lexical frequencies and phonological transcriptions were extracted from the multilingual database CLEARPOND [@marian2012clearpond]^[[Phonological transcriptions in CLEARPOND were generated from eSPEAK, [http://espeak.sourceforge.net/](http://espeak.sourceforge.net/)]].
 
@@ -343,7 +344,7 @@ r_validity <- map(
   dataset,
   \(x) janitor::clean_names(table(x$response_type))
 )
-n_participants <- map(dataset, \(x) n_distinct(x$participant_id))
+n_participants <- map(dataset, \(x) dplyr::n_distinct(x$participant_id))
 
 excluded_lang <- participants_1 |>
   filter(l2_writ_prod > 3 |
@@ -385,7 +386,7 @@ names(lengths) <- janitor::make_clean_names(names(lengths))
 
 We collected data for a total of `r format(nrow(dataset$cat_eng) + nrow(dataset$spa_eng), big.mark = ",")` trials completed by `r n_participants$cat_eng + n_participants$spa_eng` unique participants. Of those trials, `r format(nrow(dataset$cat_eng), big.mark = ",")` were provided by `r n_participants$cat_eng` unique participants who listened to Catalan words, and `r format(nrow(dataset$spa_eng), big.mark = ",")` trials were provided by `r n_participants$spa_eng` unique participants who listened to Spanish words. We excluded trials in which participants did not enter any text (*n* = `r r_validity$cat_eng["blank"]`), in which a response in a language other than English was provided (e.g., "`agua`", *n* = `r r_validity$cat_eng["language"]`), in which participants did not provide a whole word (e.g., "`f`", *n* = `r r_validity$cat_eng["incomplete"]`), and in which participants added comments to the experimenter (e.g., "`unsure`", *n* = `r r_validity$cat_eng["other"]`). In addition, we excluded data from participants that self-rated their oral and/or written skills in Catalan and Spanish, or any other second language as four or higher in a five-point scale (*n* = `r excluded_lang`), were diagnosed with a language (*n* = `r excluded_impairment`), or did not contribute more than 80% of valid trials (*n* = `r excluded_ntrials`).
 
-After applying trial-level and participant-level inclusion criteria, the resulting dataset included `r format(nrow(dataset_clean$cat_eng) + nrow(dataset_clean$cat_eng), big.mark = ",")` trials provided by `r n_distinct(dataset_clean$cat_eng$participant_id) + n_distinct(dataset_clean$cat_eng$participant_id)` unique participants. Of those trials, `r format(nrow(dataset_clean$cat_eng), big.mark = ",")` were provided by `r n_distinct(dataset_clean$cat_eng$participant_id)` unique participants who listened to Catalan words, and `r format(nrow(dataset_clean$spa_eng), big.mark = ",")` trials were provided by `r n_distinct(dataset_clean$spa_eng$participant_id)` unique participants who listened to Spanish words. Responses given by English participants to Catalan presented words were `r round(lengths$cat_eng$len_mean, 2)` characters long on average (*Median* = `r round(lengths$cat_eng$len_median, 2)`, *SD* = `r round(lengths$cat_eng$len_sd, 2)`, Range = `r round(lengths$cat_eng$len_min, 2)`-`r round(lengths$cat_eng$len_max, 2)`), while their translations to Spanish responses were `r round(lengths$spa_eng$len_mean, 2)` characters long on average (*Median* = `r round(lengths$spa_eng$len_median, 2)`, *SD* = `r round(lengths$spa_eng$len_sd, 2)`, Range = `r round(lengths$spa_eng$len_min, 2)`-`r round(lengths$spa_eng$len_max, 2)`).
+After applying trial-level and participant-level inclusion criteria, the resulting dataset included `r format(nrow(dataset_clean$cat_eng) + nrow(dataset_clean$cat_eng), big.mark = ",")` trials provided by `r dplyr::n_distinct(dataset_clean$cat_eng$participant_id) + dplyr::n_distinct(dataset_clean$cat_eng$participant_id)` unique participants. Of those trials, `r format(nrow(dataset_clean$cat_eng), big.mark = ",")` were provided by `r dplyr::n_distinct(dataset_clean$cat_eng$participant_id)` unique participants who listened to Catalan words, and `r format(nrow(dataset_clean$spa_eng), big.mark = ",")` trials were provided by `r dplyr::n_distinct(dataset_clean$spa_eng$participant_id)` unique participants who listened to Spanish words. Responses given by English participants to Catalan presented words were `r round(lengths$cat_eng$len_mean, 2)` characters long on average (*Median* = `r round(lengths$cat_eng$len_median, 2)`, *SD* = `r round(lengths$cat_eng$len_sd, 2)`, Range = `r round(lengths$cat_eng$len_min, 2)`-`r round(lengths$cat_eng$len_max, 2)`), while their translations to Spanish responses were `r round(lengths$spa_eng$len_mean, 2)` characters long on average (*Median* = `r round(lengths$spa_eng$len_median, 2)`, *SD* = `r round(lengths$spa_eng$len_sd, 2)`, Range = `r round(lengths$spa_eng$len_min, 2)`-`r round(lengths$spa_eng$len_max, 2)`).
 
 
 
@@ -450,7 +451,7 @@ tbl_data <- list(
   mutate(correct = prop_adj(correct, n_trials)) |>
   summarise(across(correct, lst(mean, sd, sem, min, max)),
     across(n_trials, lst(mean, sum, sd, min, max)),
-    n_participants = n_distinct(participant_id),
+    n_participants = dplyr::n_distinct(participant_id),
     .by = c(group, exp)
   ) |>
   relocate(n_participants, matches("correct"))
@@ -518,6 +519,7 @@ tbl_data |>
 
 ```{r fig-epreds-1}
 #| label: fig-epreds-1
+#| cache: true
 #| fig-height: 5
 #| fig-width: 11
 #| fig-cap: "Posterior model-predicted mean accuracy in Experiment 1. Predictions were generated from 4,000 posterior samples, extracted for different values of *CLPN* (0, 2, 4, 8, 12) and *Similarity* (1-100). Predictions are plotted separately for English participants translating Catalan words, and for English participants translating Spanish words. Lines indicate mean predictions, and intervals indicate 95%, 89%, 78%, 67%, and 50% credible intervals (CrI)."
@@ -593,7 +595,7 @@ collection_dates <- participants_2 |>
   range() |>
   format("%B %dth, %Y")
 
-n_participants <- n_distinct(participants_2)
+n_participants <- dplyr::n_distinct(participants_2)
 n_participants_group <- table(participants_2$group)
 participants_age <- participants_2 |>
   summarise(across(age, lst(mean, sd, min, max)))
@@ -620,7 +622,7 @@ r_validity <- map(
   dataset,
   \(x) janitor::clean_names(table(x$response_type))
 )
-n_participants <- map(dataset, \(x) n_distinct(x$participant_id))
+n_participants <- map(dataset, \(x) dplyr::n_distinct(x$participant_id))
 
 excluded_lang <- participants_2 |>
   filter(l2_writ_prod > 3 |
@@ -657,7 +659,7 @@ lengths <- dataset_2 |>
   )
 ```
 
-We collected data for a total of `r format(nrow(dataset$cat_spa) + nrow(dataset$cat_spa), big.mark = ",")` trials completed by `r n_participants$cat_spa` unique participants. We excluded trials in which participants did not enter any text (*n* = `r r_validity$cat_spa["blank"]`), in which a response in a language other than Spanish was provided (*n* = `r r_validity$cat_spa["language"]`), in which participants did not provide a whole word (*n* = `r r_validity$cat_spa["incomplete"]`), and in which participants added comments to the experimenter (*n* = `r r_validity$cat_spa["other"]`). In addition, we excluded data from participants that self-rated their oral and/or written skills in Catalan and Spanish, or any other second language as four or higher in a five-point scale (*n* = `r excluded_lang`), were diagnosed with a developmental language disorder (*n* = `r excluded_impairment`), or did not contribute more than 80% of valid trials (*n* = `r excluded_ntrials`). After applying trial-level and participant-level inclusion criteria, the resulting dataset included `r format(nrow(dataset_clean$cat_spa), big.mark = ",")` trials provided by `r n_distinct(dataset_clean$cat_spa$participant_id) + n_distinct(dataset_clean$cat_spa$participant_id)` unique participants. Of those trials, `r format(nrow(dataset_clean$cat_spa), big.mark = ",")` were provided by `r n_distinct(dataset_clean$cat_spa$participant_id)` unique participants who listened to Catalan words, and `r format(nrow(dataset_clean$cat_spa), big.mark = ",")` trials were provided by `r n_distinct(dataset_clean$cat_spa$participant_id)` unique participants who listened to Spanish words. Responses given by participants were `r round(lengths$len_mean, 2)` characters long on average (*Median* = `r round(lengths$len_median, 2)`, *SD* = `r round(lengths$len_sd, 2)`, Range = `r round(lengths$len_min, 2)`-`r round(lengths$len_max, 2)`).
+We collected data for a total of `r format(nrow(dataset$cat_spa) + nrow(dataset$cat_spa), big.mark = ",")` trials completed by `r n_participants$cat_spa` unique participants. We excluded trials in which participants did not enter any text (*n* = `r r_validity$cat_spa["blank"]`), in which a response in a language other than Spanish was provided (*n* = `r r_validity$cat_spa["language"]`), in which participants did not provide a whole word (*n* = `r r_validity$cat_spa["incomplete"]`), and in which participants added comments to the experimenter (*n* = `r r_validity$cat_spa["other"]`). In addition, we excluded data from participants that self-rated their oral and/or written skills in Catalan and Spanish, or any other second language as four or higher in a five-point scale (*n* = `r excluded_lang`), were diagnosed with a developmental language disorder (*n* = `r excluded_impairment`), or did not contribute more than 80% of valid trials (*n* = `r excluded_ntrials`). After applying trial-level and participant-level inclusion criteria, the resulting dataset included `r format(nrow(dataset_clean$cat_spa), big.mark = ",")` trials provided by `r dplyr::n_distinct(dataset_clean$cat_spa$participant_id) + dplyr::n_distinct(dataset_clean$cat_spa$participant_id)` unique participants. Of those trials, `r format(nrow(dataset_clean$cat_spa), big.mark = ",")` were provided by `r dplyr::n_distinct(dataset_clean$cat_spa$participant_id)` unique participants who listened to Catalan words, and `r format(nrow(dataset_clean$cat_spa), big.mark = ",")` trials were provided by `r dplyr::n_distinct(dataset_clean$cat_spa$participant_id)` unique participants who listened to Spanish words. Responses given by participants were `r round(lengths$len_mean, 2)` characters long on average (*Median* = `r round(lengths$len_median, 2)`, *SD* = `r round(lengths$len_sd, 2)`, Range = `r round(lengths$len_min, 2)`-`r round(lengths$len_max, 2)`).
 
 
 ```{r posterior-2}
@@ -678,6 +680,7 @@ MCMC chains in the model showed strong evidence of convergence ($\hat{R}<1.01$) 
 
 ```{r fig-epreds-2}
 #| label: fig-epreds-2
+#| cache: true
 #| fig-cap: "Posterior model-predicted mean accuracy in Experiment 1. Predictions were generated from 4,000 posterior samples, extracted for different values of *CLPN* (0, 2, 4, 8, 12) and *Similarity* (1-100). Predictions are plotted separately for English participants translating Catalan words, and for English participants translating Spanish words. Lines indicate mean predictions, and intervals indicate 95%, 89%, 78%, 67%, and 50% credible intervals (CrI)."
 #| fig-height: 3.5
 #| fig-width: 10
@@ -724,6 +727,48 @@ Participants from both Experiment 1 and 2 benefited strongly from phonological s
 ```{r tbl-surprises}
 #| label: tbl-surprises
 #| tbl-cap: "List of items with unexpectedly high accuracy: the Levenshtein similarityscore betwen the presented word (in Catalan or Spanish) and their correct English translation is zero, but participants, who are reportedly unfamiliar with the presented language, were on average >10% likely to guess the correct translation."
+ipa_to_tipa <- function(ipa) {
+  dict <- c(
+    "ɑ" = "A", 
+    "ɒ" = "6",
+    "æ" = "\\ae", 
+    "ʌ" = "2", 
+    "β" = "B",
+    "ʤ" = "}\\\\textdyoghlig\\\\textipa{",
+    "d͡ʒ" = "}\\\\textdyoghlig\\\\textipa{",
+    "dʒ" = "}\\\\textdyoghlig\\\\textipa{", 
+    "ð" = "D",
+    "ə" = "@",
+    "ɛ" = "E",
+    "ɣ" = "G",
+    "ɡ" = "g",
+    "ɫ" = "\\|~l", 
+    "ʎ" = "}\\\\textlambda\\\\textipa{",
+    "ŋ" = "N",
+    "ɲ" = "}\\\\textltailn\\\\textipa{", 
+    "ɔ" = "O",
+    "ɾ" = "R",
+    "ʧ" = "}\\\\textteshlig\\\\textipa{", 
+    "tʃ" = "}\\\\textteshlig\\\\textipa{", 
+    "t͡ʃ" = "}\\\\textteshlig\\\\textipa{", 
+    "θ" = "T", 
+    "t͡s" = "}\\\\texttslig\\\\textipa{", 
+    "ts" = "}\\\\texttslig\\\\textipa{", 
+    "ʃ" = "S", 
+    "ʒ" = "Z", 
+    "ɪ" = "I", 
+    "ʊ" = "U", 
+    "ɜ" = "3", 
+    "ɹ" = "\\*r", 
+    "ː" = ":", 
+    "ˈ" = '"'
+  )
+  tipa <- stringr::str_replace_all(ipa, dict)
+  tipa <- paste0("\\textipa{", tipa, "}")
+  return(tipa)
+}
+
+
 tbl_data <- list(
   "Experiment 1" = dataset_1,
   "Experiment 2" = dataset_2
@@ -731,36 +776,35 @@ tbl_data <- list(
   bind_rows(.id = "exp") |>
   mutate(
     translation = paste0(word_1, " - ",  word_2),
-    xsampa = paste0("/", sampa_1, "/ - /", sampa_2, "/")
+    ipa = ipa_to_tipa(paste0("/", ipa_1, "/ - /", ipa_2, "/"))
   ) |> 
   summarise(
     n = n(),
     correct = sum(correct),
-    .by = c(exp, group, lv, translation, xsampa)
+    .by = c(exp, group, lv, translation, ipa)
   ) |>
   mutate(
     accuracy = prop_adj(correct, n),
     accuracy_se = prop_adj_se(correct, n)
   ) |>
   dplyr::filter(lv == 0, accuracy >= 0.1) |>
-  select(exp, translation, xsampa, group, accuracy, accuracy_se) |>
+  select(exp, translation, ipa, group, accuracy, accuracy_se) |>
   arrange(exp, group, desc(accuracy)) |> 
-  select(translation, xsampa, accuracy, accuracy_se) |> 
+  select(translation, ipa, accuracy, accuracy_se) |> 
   mutate(accuracy = round(accuracy * 100, 2),
          accuracy_se = round(accuracy_se * 100, 2))
 
-names(tbl_data) <- c("Translation", "X-SAMPA", "Accuracy (\\%)", "SE")
+names(tbl_data) <- c("Translation", "IPA", "Accuracy (\\%)", "SE")
 
 tt(tbl_data) |> 
+  style_tt(i = 0, bold = TRUE, line = "tb") |> 
   group_tt(i = list(
     "Experiment 1 (cat-ENG)" = 1,
     "Experiment 2 (spa-ENG)" = 6,
     "Experiment 3 (cat-SPA)" = 22)) |> 
-  style_tt(i = 0, bold = TRUE, line = "tb") |> 
   style_tt(i = 1, bold = TRUE, line = "b") |> 
   style_tt(i = 7, bold = TRUE, line = "tb") |> 
   style_tt(i = 24, bold = TRUE, line = "tb")
-
 ```
 
 
@@ -782,7 +826,7 @@ collection_dates <- participants_3 |>
   range() |>
   format("%B %dth, %Y")
 
-n_participants <- n_distinct(participants_3)
+n_participants <- dplyr::n_distinct(participants_3)
 n_participants_group <- table(participants_3$group)
 participants_age <- participants_3 |>
   summarise(across(age, lst(mean, sd, min, max)))
@@ -831,7 +875,7 @@ r_validity <- map(
   dataset,
   \(x) janitor::clean_names(table(x$response_type))
 )
-n_participants <- map(dataset, \(x) n_distinct(x$participant_id))
+n_participants <- map(dataset, \(x) dplyr::n_distinct(x$participant_id))
 
 dataset <- quest_responses |>
   filter(group != "cat-SPA") |>
@@ -866,7 +910,7 @@ dataset_clean <- quest_responses |>
 
 We collected data for a total of `r format(nrow(dataset$cat_eng) + nrow(dataset$spa_eng), big.mark = ",")` trials completed by `r n_participants$cat_eng + n_participants$spa_eng` unique participants. Of those trials, `r format(nrow(dataset$cat_eng), big.mark = ",")` were provided by `r n_participants$cat_eng` unique participants who listened to Catalan words, and `r format(nrow(dataset$spa_eng), big.mark = ",")` trials were provided by `r n_participants$spa_eng` unique participants who listened to Spanish words. We excluded trials in which participants did not enter any text (*n* = 0), in which a response in a language other than English was provided (*n* = `r r_validity$cat_eng["language"]`), in which participants did not provide a whole word (*n* = 0), and in which participants added comments to the experimenter (*n* = 0). In addition, we excluded data from participants that self-rated their oral and/or written skills in Catalan and Spanish, or any other second language as four or higher in a five-point scale (*n* = `r excluded_lang`), were diagnosed with a language (*n* = `r excluded_impairment`), or did not contribute more than 80% of valid trials (*n* = `r excluded_ntrials`).
 
-After applying trial-level and participant-level inclusion criteria, the resulting dataset included `r format(nrow(dataset_clean$cat_eng) + nrow(dataset_clean$spa_eng), big.mark = ",")` trials provided by `r n_distinct(dataset_clean$cat_eng$participant_id) + n_distinct(dataset_clean$spa_eng$participant_id)` unique participants. Of those trials, `r format(nrow(dataset_clean$cat_eng), big.mark = ",")` were provided by `r n_distinct(dataset_clean$cat_eng$participant_id)` unique participants who listened to Catalan words, and `r format(nrow(dataset_clean$spa_eng), big.mark = ",")` trials were provided by `r n_distinct(dataset_clean$spa_eng$participant_id)` unique participants who listened to Spanish words.
+After applying trial-level and participant-level inclusion criteria, the resulting dataset included `r format(nrow(dataset_clean$cat_eng) + nrow(dataset_clean$spa_eng), big.mark = ",")` trials provided by `r dplyr::n_distinct(dataset_clean$cat_eng$participant_id) + dplyr::n_distinct(dataset_clean$spa_eng$participant_id)` unique participants. Of those trials, `r format(nrow(dataset_clean$cat_eng), big.mark = ",")` were provided by `r dplyr::n_distinct(dataset_clean$cat_eng$participant_id)` unique participants who listened to Catalan words, and `r format(nrow(dataset_clean$spa_eng), big.mark = ",")` trials were provided by `r dplyr::n_distinct(dataset_clean$spa_eng$participant_id)` unique participants who listened to Spanish words.
 
 ```{r knowledge}
 knowledge_cateng <- dataset_clean$cat_eng |> count(knowledge)
@@ -975,6 +1019,7 @@ Participants translating Catalan words and participants translating Spanish word
 
 ```{r fig-epreds-3}
 #| label: fig-epreds-3
+#| cache: true
 #| fig-cap: "Posterior model-predicted mean accuracy in Experiment 2. Predictions were generated from 4,000 posterior samples, extracted for different values of *CLPN* (0, 2, 4, 8, 12) and *Similarity* (1-100). Predictions are plotted separately for English participants translating Catalan words, and for English participants translating Spanish words. Lines indicate mean predictions, and intervals indicate 95%, 89%, 78%, 67%, and 50% credible intervals (CrI)."
 #| fig-height: 5
 #| fig-width: 10
